--- a/stats.html
+++ b/stats.html
@@ -77,16 +77,7 @@
                           </tr>
                         </thead>
                         <tbody id="primeraTabla">
-                          <!-- <tr>
-                            <td class="table table-success  primera-fila">Events with the highest porcentage of attendance</td>
-                            <td class="primera-fila">Events with the lowest porcentage of attendance</td>
-                            <td class="primera-fila">Events with the larger capacity</td>
-                          </tr>
-                          <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                          </tr> -->
+
                         </tbody>
                       </table>
                       <table class="table table-success ">
@@ -95,13 +86,13 @@
                             <th colspan="3" scope="col">Upcoming events statistics by category</th>
                           </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="segundaTabla">
                           <tr>
                             <td class="primera-fila">Categories</td>
                             <td class="primera-fila">Revenues</td>
                             <td class="primera-fila">Percentage of attendance</td>
                           </tr>
-                          <tr>
+                          <!-- <tr>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -115,7 +106,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                          </tr> 
+                          </tr>  -->
                         </tbody>
                       </table>
                       <table class="table table-success ">
@@ -124,13 +115,13 @@
                             <th colspan="3" scope="col">Past events statistics by category</th>
                           </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="terceraTabla">
                           <tr>
                             <td class="primera-fila">Categories</td>
                             <td class="primera-fila">Revenues</td>
                             <td class="primera-fila">Percentage of attendance</td>
                           </tr>
-                          <tr>
+                          <!-- <tr>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -154,7 +145,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                          </tr>
+                          </tr> -->
                         </tbody>
                       </table>
             </div>
